--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "16.0.3",
     "primereact": "^10.9.7",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "sass": "^1.94.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
