--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "mobx": "^6.15.0",
+    "mobx-react-lite": "^4.1.1",
     "next": "16.0.3",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.7",
