--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "primereact": "^10.9.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "sass": "^1.94.0"
+    "sass": "^1.94.0",
+    "typewriter-effect": "^2.22.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
