--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mobx": "^6.15.0",
     "mobx-react-lite": "^4.1.1",
     "next": "16.0.3",
+    "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.7",
     "react": "19.2.0",
